Session header apache fix (alphanumeric + '-' only)
